# veazy-b2c

./: .gitignore  DB_knowledge.md  temp_discussion.md  vietnam_visa_types_updated.json
backend/: VNM_tourism_single_entry_workflow.json  VNM_tourism_single_entry_workflow_optimized.json  WORKFLOW_DYNAMIC_ANALYSIS.md  alembic.ini  countries_minimal.json  create_all_collections.py  create_real_visa_data.py  create_sample_data.py  create_verify_service.py  create_visa_type_selection_data.py  export_to_atlas.py  get_verify_service.py  pyproject.toml  sync_visa_codes.py  test_simple.py  test_user.py  update_countries.py  update_visa_enhanced_data.py
backend/agent/: HANDOFF_IMPLEMENTATION.md  production_app.py
backend/agent/agent/: agent.py  prompts.py  state.py
backend/agent/agents/: intelligent_workflow_agent.py
backend/agent/config/: settings.py
backend/agent/tools/: application_basic.py  application_detailed.py  database_visa_lookup.py  document_processing.py  greetings.py  session_management.py  start_workflow_tool.py  visa_information.py  workflow_executor.py  workflow_executor_backup.py
backend/alembic/: env.py
backend/alembic/versions/: 532e76b0d28e_initial_document_based_jsonb_schema.py
backend/api/: auth.py  countries.py  document_upload.py
backend/database/: mongodb.py
backend/database/models/: __init__.py  audit.py  comprehensive_visa_application.py  country.py  document.py  form_template.py  payment.py  user.py  workflow.py  (+2 more)
backend/migrations/: add_otp_fields.py  add_profile_fields.py
backend/services/: jwt_service.py  twilio_service.py
(+52 files in other folders)
